add img to each

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <p>This is a drawing app that can be download from IOS, but you need to purchase $9.99 to download it from App Store. It's a great place where you can start your digital drawing!</p>
                         </div>
                         <div class="tech-img">
-                            <img src="img/procreate.png" alt="img">
+                            <img src="img/procreate.png" alt="img" width="120" height="120">
                         </div>
                     </div>
                     <div class="tech-card">
@@ -81,7 +81,7 @@
                             <p>This is a free digital drawing software that you can download it on your computers, tablets and phone. Easy for beginners to create illustrations.</p>
                         </div>
                         <div class="tech-img">
-                            <img src="img/procreate.png" alt="img">
+                            <img src="img/sketchbook.png" alt="img" width="120" height="120">
                         </div>
                     </div>
                     <div class="tech-card">
@@ -91,7 +91,7 @@
                             <p>Super helpful for all painters especially graphic designers. It allows users to create designs as well as helps in designing logos, marketing materials for businesses.</p>
                         </div>
                         <div class="tech-img">
-                            <img src="img/procreate.png" alt="img">
+                            <img src="img/ps.png" alt="img" width="120" height="120">
                         </div>
                     </div>                    
                     <div class="tech-card">
@@ -101,7 +101,7 @@
                             <p>Tablet has the perfect screen for drawing digitally when it comes to size.</p>
                         </div>
                         <div class="tech-img">
-                            <img src="img/procreate.png" alt="img">
+                            <img src="img/tablets.jpg" alt="img" width="170" height="120">
                         </div>
                     </div>                  
                     <div class="tech-card">
@@ -111,7 +111,7 @@
                             <p>Digital pencils allow painters to draw smoothly on their tablets.</p>
                         </div>
                         <div class="tech-img">
-                            <img src="img/procreate.png" alt="img">
+                            <img src="img/digitalpen.jpeg" alt="img" width="170" height="120">
                         </div>
                     </div>                    
                     <div class="tech-card">
