--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <p>This is a drawing app that can be download from IOS, but you need to purchase $9.99 to download it from App Store. It's a great place where you can start your digital drawing!</p>
                         </div>
                         <div class="tech-img">
-                            <img src="img/procreate.png" alt="img" width="120" height="120">
+                            <img src="img/procreate.png" alt="img">
                         </div>
                     </div>
                     <div class="tech-card">
@@ -81,7 +81,7 @@
                             <p>This is a free digital drawing software that you can download it on your computers, tablets and phone. Easy for beginners to create illustrations.</p>
                         </div>
                         <div class="tech-img">
-                            <img src="img/sketchbook.png" alt="img" width="120" height="120">
+                            <img src="img/sketchbook.png" alt="img">
                         </div>
                     </div>
                     <div class="tech-card">
@@ -91,7 +91,7 @@
                             <p>Super helpful for all painters especially graphic designers. It allows users to create designs as well as helps in designing logos, marketing materials for businesses.</p>
                         </div>
                         <div class="tech-img">
-                            <img src="img/ps.png" alt="img" width="120" height="120">
+                            <img src="img/ps.png" alt="img">
                         </div>
                     </div>                    
                     <div class="tech-card">
@@ -101,7 +101,7 @@
                             <p>Tablet has the perfect screen for drawing digitally when it comes to size.</p>
                         </div>
                         <div class="tech-img">
-                            <img src="img/tablets.jpg" alt="img" width="170" height="120">
+                            <img src="img/tablets.jpg" alt="img">
                         </div>
                     </div>                  
                     <div class="tech-card">
@@ -111,7 +111,7 @@
                             <p>Digital pencils allow painters to draw smoothly on their tablets.</p>
                         </div>
                         <div class="tech-img">
-                            <img src="img/digitalpen.jpeg" alt="img" width="170" height="120">
+                            <img src="img/digitalpen.jpeg" alt="img">
                         </div>
                     </div>                    
                     <div class="tech-card">
@@ -121,6 +121,22 @@
                         </div>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/nhAQf5YZOIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>                  
+                </div>
+            </div>
+        </section>
+        
+        
+        <section id="future">
+            <div class="innovation container">
+                <div class="col-left">
+                    <div class="innovation-img">
+                        <img src="img/handdraw.png" alt="img">
+                    </div>
+                </div>
+                <div class="col-right">
+                    <h1 class="overview-title">Possible Future Innovation</h1>
+                    <h2>Based on self imagination</h2>
+                    <p>I thought about making a connector that looks like a headset and you can wear it. Once you press the power button, it connects to your brain and it can read your mind. My idea was inspired by a video that I watched from YouTube. For this headset, you can use it and set orders in your mind and the robot will automatically follow your order. Therefore, you can control this robot to draw the image that you illustrate in your mind. Of course, this connector and robot can only work on drawing because this is an artist robot! I know this is a ridiculous idea, but I thought it might happen in the future. </p>
                 </div>
             </div>
         </section>
