add media queries

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </head>
     <body>
         <!-- HTML -->
+        
         <section id="title">
             <div class="title-container">
                 <div>
@@ -51,7 +52,7 @@
                         <p>Drawing is the oldest form of human expression</p>
                         <p>“It is believed that drawing was used as a specialised form of communication before the invention of the written language, demonstrated by the production of cave and rock paintings around  30,000 years ago.” -Quote From <a href="https://en.wikipedia.org/wiki/Drawing#:~:text=It%20is%20believed%20that%20drawing,Art%20of%20the%20Upper%20Paleolithic).">Wikipedia</a></p>
                         <p>In early days, people used sharp props to paint on stones. As our world became more advanced, we started to use pen, pencils, color pencils, watercolor, oil painting, etc.</p>
-                            <div class="icon"><img src="img/cave-painting.jpg"/></div>
+                            <div class="icon"><img src="img/cave-painting.jpg"></div>
                     </div>
                 </div>
             </div>
@@ -118,8 +119,8 @@
                         <div class="tech-info">
                             <h1>Invention</h1>
                             <h2>Drawing Robot</h2>
-                        </div>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/nhAQf5YZOIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                     </div>                  
                 </div>
             </div>
@@ -130,7 +131,7 @@
             <div class="innovation container">
                 <div class="col-left">
                     <div class="innovation-img">
-                        <img src="img/handdraw.png" alt="img">
+                        <img src="img/handdraw.png" style="width:100%;" alt="img">
                     </div>
                 </div>
                 <div class="col-right">
