change box of video

--- a/index.html
+++ b/index.html
@@ -115,12 +115,10 @@
                             <img src="img/digitalpen.jpeg" alt="img">
                         </div>
                     </div>                    
-                    <div class="tech-card">
-                        <div class="tech-info">
+                    <div class="video">
                             <h1>Invention</h1>
                             <h2>Drawing Robot</h2>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/nhAQf5YZOIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
                     </div>                  
                 </div>
             </div>
@@ -131,7 +129,7 @@
             <div class="innovation container">
                 <div class="col-left">
                     <div class="innovation-img">
-                        <img src="img/handdraw.png" style="width:100%;" alt="img">
+                        <img src="img/handdraw.png" alt="img">
                     </div>
                 </div>
                 <div class="col-right">
