--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section id="title">
             <div class="title-container">
                 <div>
-                    <h1>Freedom Project: Visual Arts Tech</h1>
+                    <h1>Freedom Project: Arts Tech</h1>
                     <a href="#" type="button" class="cta">Explore</a>
                 </div>
             </div>
