--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
     </head>
     <body>
         <!-- HTML -->
+        <div class="navbar">
+            <a href="#" class="logo">Victoria</a>
+            <ul class="nav">
+                <li><a href="#title">Home</a></li>
+                <li><a href="#overview">About</a></li>
+                <li><a href="#tech">Topic</a></li>
+                <li><a href="#future">Innovation</a></li>
+            </ul>
+        </div>
+        <div class="banner-area" id="home"></div>
+        <div class="banner-area" id="home"></div>
+        <div class="banner-area" id="home"></div>
+        <div class="banner-area" id="home"></div>
         
         <section id="title">
             <div class="title-container">
