make revisions to the overview

--- a/index.html
+++ b/index.html
@@ -28,16 +28,12 @@
                 <li><a href="#future">Innovation</a></li>
             </ul>
         </div>
-        <div class="banner-area" id="home"></div>
-        <div class="banner-area" id="home"></div>
-        <div class="banner-area" id="home"></div>
-        <div class="banner-area" id="home"></div>
         
         <section id="title">
             <div class="title-container">
                 <div>
-                    <h1>Freedom Project: Arts Tech</h1>
-                    <a href="#" type="button" class="cta">Explore</a>
+                    <h1>Future Art Tech</h1>
+                    <a href="#overview" type="button" class="cta">Explore</a>
                 </div>
             </div>
         </section>
@@ -46,28 +42,26 @@
         <section id="overview">
             <div class="overview-container">
                 <div class="overview-main">
-                    <h1 class="overview-title">Overview</h1>
-                    <p>For the Freedom Project, I am making a website by using HTML, CSS, and Github. It’s all about how visual arts can create a connection with different fields of technology and share my experience during the process of doing the Freedom Project.</p>
-                    <p>In my freedom project blog entries, I recorded my thought process. Feel free to click this <a href="https://docs.google.com/document/d/1oP9vSG388G0RjkSoutiM7QkBKvfK-1OaZgGT3TZ6Zgc/edit">link</a> to see it!</p>
-                </div>
-                <div class="motivation">
+                    <h1 class="overview-title">Breif History of Drawing</h1>
+                    <div class="motivation">
                     <div class="motivation-2">
-                        <div class="icon"><img src="https://img.icons8.com/windows/64/000000/effort.png"/>
-                        <a href="https://icons8.com/icon/rzYmCzOdNhgo/effort">Effort icon by Icons8</a>
-                        </div>
-                        <h2>Motivation</h2>
-                        <p>The reason I choose to do visual arts is because I am interested in learning how art and technology can be combined together and what impact will come out if they are connected. Technology is playing an important role in visual arts. It makes an illustrator's life simpler by providing tech tools like drawing apps and it also supports beginners to become more professionals. In conclusion, technology is helpful to visual artists to find a career and visual art itself. It opens a new door for arts and it’s being introduced to more people in the world through technology.</p>
-                    </div>
-                </div>
-                <div class="motivation">
-                    <div class="motivation-2">
-                        <h2>Brief History Of Drawing</h2>
                         <p>Drawing is the oldest form of human expression</p>
                         <p>“It is believed that drawing was used as a specialised form of communication before the invention of the written language, demonstrated by the production of cave and rock paintings around  30,000 years ago.” -Quote From <a href="https://en.wikipedia.org/wiki/Drawing#:~:text=It%20is%20believed%20that%20drawing,Art%20of%20the%20Upper%20Paleolithic).">Wikipedia</a></p>
                         <p>In early days, people used sharp props to paint on stones. As our world became more advanced, we started to use pen, pencils, color pencils, watercolor, oil painting, etc.</p>
                             <div class="icon"><img src="img/cave-painting.jpg"></div>
                     </div>
                 </div>
+                </div>
+                <div class="motivation">
+                    <div class="motivation-2">
+                        <h2>Motivation</h2>
+                        <p>The reason I choose to do visual arts is because I am interested in learning how art and technology can be combined together and what impact will come out if they are connected. Technology is playing an important role in visual arts. It makes an illustrator's life simpler by providing tech tools like drawing apps and it also supports beginners to become more professionals. In conclusion, technology is helpful to visual artists to find a career and visual art itself. It opens a new door for arts and it’s being introduced to more people in the world through technology.</p>
+                        <div class="icon"><img src="https://img.icons8.com/windows/64/000000/effort.png"/>
+                        <a href="https://icons8.com/icon/rzYmCzOdNhgo/effort">Effort icon by Icons8</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
         
