revise innovation text

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="col-right">
                     <h1 class="overview-title">Possible Future Innovation</h1>
                     <h2>Based on self imagination</h2>
-                    <p>I thought about making a connector that looks like a headset and you can wear it. Once you press the power button, it connects to your brain and it can read your mind. My idea was inspired by a video that I watched from YouTube. For this headset, you can use it and set orders in your mind and the robot will automatically follow your order. Therefore, you can control this robot to draw the image that you illustrate in your mind. Of course, this connector and robot can only work on drawing because this is an artist robot! I know this is a ridiculous idea, but I thought it might happen in the future. </p>
+                    <p>I thought about making a connector that looks like a headset and you can wear it. Once you press the power button, it connects to your brain and it can read your mind. For this headset, you can use it and set orders in your mind and the robot will automatically follow your order. Therefore, you can control this robot to draw the image that you illustrate in your mind. Of course, this connector and robot can only work on drawing because this is an artist robot!</p>
                 </div>
             </div>
         </section>
