--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="col-right">
                     <h1 class="overview-title">Possible Future Innovation</h1>
                     <h2>Based on self imagination</h2>
-                    <p>I thought about making a connector that looks like a headset and you can wear it. Once you press the power button, it connects to your brain and it can read your mind. For this headset, you can use it and set orders in your mind and the robot will automatically follow your order. Therefore, you can control this robot to draw the image that you illustrate in your mind. Of course, this connector and robot can only work on drawing because this is an artist robot!</p>
+                    <p>A possible future innovation that I thought about was a VR headset that you can wear it. Before you wear the headset, you have to connect it to the computer to start its function. Then you wear the headset, you will see(enter) a virtual place where you could start your imagination there. You can set orders to make the "virtual world" run. Once orders being set, it will automatically send back to the computer and your imagine picture will appear on the screen.</p>
                 </div>
             </div>
         </section>
